Inital Setup and nav bar testing

--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Michael Mckay</title>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/reset.css">
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1>
-        Hello welcome to my portfolio
-    </h1>
+    <div class='nav-container'>
+    <div class='nav shadow'>
+    <a>
+        Portfolio
+    </a>
+    <span>
+        Michael McKay
+    </span>
+     <a>
+        Contact
+     </a>
+    </div>
+</div>  
+<p class='quote'>“It is not the mountain we conquer, but ourselves."</p>
     <a href="https://stormy-tundra-79111.herokuapp.com/">E-Commerce</a>
     <script src="main.js"></script>
-    <script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </body>
 </html>
