--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 </div>  
 <p class='quote'>“It is not the mountain we conquer, but ourselves."</p>
-    <a href="https://stormy-tundra-79111.herokuapp.com/">E-Commerce</a>
+    <a href="https://doublejumps.herokuapp.com/">E-Commerce</a>
     <script src="main.js"></script>
 </body>
 </html>
