--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Michael Mckay</title>
-  <link rel="stylesheet" type="text/css" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <script type="text/javascript" src="scripts/main.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
 </head>
 <body>
-    <div class='nav-container'>
-    <div class='nav shadow'>
-    <a>
-        Portfolio
-    </a>
-    <span>
-        Michael McKay
-    </span>
-     <a>
-        Contact
-     </a>
+    <div class='insert'>
     </div>
-</div>  
-<p class='quote'>“It is not the mountain we conquer, but ourselves."</p>
-    <a href="https://doublejumps.herokuapp.com/">E-Commerce</a>
-    <script src="main.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>
+        setup();
+    </script>          
+
 </body>
 </html>
