--- a/test.html
+++ b/test.html
@@ -15,42 +15,46 @@
             <div class='flex-align-center column'>
                 <img class='my-img' src='./assets/squareme.png'>
                 <p class='text landing-text'>Hello, My name is Michael and I'm a software developer in Colorado. Take a look at my portfolio below and get in contact with me if you are interested.</p>
+                <div>
+                    <img class='contact-img' src='./assets/Github.png'>
+                    <img class='contact-img' src='./assets/email-icon.png'>
+                    <img class='contact-img' src='./assets/linkedin.png'>
+                </div>
             </div>    
         </div>
-        <div class='portfolio flex-align-center column'>
-            <div>
+        <div class='portfolio'>
+            <div class='flex-align-center column'>
                 <div class='flex-justify-center'>
-                    <hr class='hr-custom'>
+                    <hr class='hr-custom right'>
                     <h2 class='title'>Helpful</h2>
-                    <hr class='hr-custom'>
+                    <hr class='hr-custom left'>
                 </div>
-                <img src='./assets/Helpful.PNG'>
-                <span class='text'>View the Source Code</span>
+                <img class='portfolio-img' src='./assets/Helpful.PNG'>
+                <span class='github'>View the Source Code</span>
                 <p class='text'> Helpful us a platform for volunteer organizations and volunteers to connect, create and grow.</p>
             </div>
-            <div>
+            <div class='flex-align-center column'>
                 <div class='flex-justify-center'>
-                        <hr class='hr-custom'>
+                        <hr class='hr-custom right'>
                         <h2 class='title'>Double Jump</h2>
-                        <hr class='hr-custom'>
+                        <hr class='hr-custom left'>
                     </div>
-                <img src='./assets/Doublejump.PNG'>
-                <span class='text'>View the Source Code</span>
-                <p class='text'> Helpful us a platform for volunteer organizations and volunteers to connect, create and grow.</p>
+                <img class='portfolio-img' src='./assets/Doublejump.PNG'>
+                <span class='github'>View the Source Code</span>
+                <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
             </div>
-            <div>
+            <div class='flex-align-center column'>
                 <div class='flex-justify-center'>
-                        <hr class='hr-custom'>
-                        <h2 class='title'>Cohorts</h2>
-                        <hr class='hr-custom'>
+                        <hr class='hr-custom right'>
+                        <h2 class='title'>Coming Soon</h2>
+                        <hr class='hr-custom left'>
                     </div>
                 <img class='portfolio-img' src='./assets/Helpful.PNG'>
-                <span class='text'>View the Source Code</span>
-                <p class='text'> Helpful us a platform for volunteer organizations and volunteers to connect, create and grow.</p>
+                <span class='github'>View the Source Code</span>
+                <p class='text'> Coming soon! </p>
             </div>
         </div>
         <div class='footer flex-align-center'>
-            <span class='text'>Contact | Email | Github</span>
         </div>
     </main>
 </body>
