--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Michael Mckay</title>
     <script type="text/javascript" src="scripts/main.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
@@ -14,11 +14,17 @@
         <div class='parallax'>
             <div class='flex-align-center column'>
                 <img class='my-img' src='./assets/squareme.png'>
-                <p class='text landing-text'>Hello, My name is Michael and I'm a software developer in Colorado. Take a look at my portfolio below and get in contact with me if you are interested.</p>
+                <p class='text landing-text'>Hello, My name is Michael and I'm a software developer in Colorado. I love to code and chat with great people. Shoot me an email if you want to talk.</p>
                 <div>
-                    <img class='contact-img' src='./assets/Github.png'>
-                    <img class='contact-img' src='./assets/email-icon.png'>
-                    <img class='contact-img' src='./assets/linkedin.png'>
+                    <a href="https://github.com/Mamckay">
+                        <img class='contact-img' src='./assets/Github.png'>
+                    </a>
+                    <a>
+                        <img class='contact-img' src='./assets/email-icon.png'>
+                    </a>
+                    <a href="https://www.linkedin.com/in/michaelcmckay/">
+                        <img class='contact-img' src='./assets/linkedin.png'>
+                    </a>
                 </div>
             </div>    
         </div>
