--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
                     <a href="https://github.com/Mamckay">
                         <img class='contact-img' src='./assets/Github.png'>
                     </a>
-                    <a>
+                    <a href="mailto:mamckay89@gmail.com">
                         <img class='contact-img' src='./assets/email-icon.png'>
                     </a>
                     <a href="https://www.linkedin.com/in/michaelcmckay/">
                         <img class='contact-img' src='./assets/linkedin.png'>
+                    </a>
+                    <a href="./assets/Resume.pdf">
+                        <img class='contact-img' src='./assets/resume-icon.png'>
                     </a>
                 </div>
             </div>    
@@ -35,28 +38,40 @@
                     <h2 class='title'>Helpful</h2>
                     <hr class='hr-custom left'>
                 </div>
-                <img class='portfolio-img' src='./assets/Helpful.PNG'>
-                <span class='github'>View the Source Code</span>
+                <a href="https://helpful-client.herokuapp.com/">
+                    <img class='portfolio-img' src='./assets/Helpful.PNG'>
+                </a>
+                <a href="https://github.com/thinkful-ei26/Helpful-Client">
+                    <span class='github'>View the Source Code</span>
+                </a>
                 <p class='text'> Helpful us a platform for volunteer organizations and volunteers to connect, create and grow.</p>
             </div>
             <div class='flex-align-center column'>
                 <div class='flex-justify-center'>
-                        <hr class='hr-custom right'>
-                        <h2 class='title'>Double Jump</h2>
-                        <hr class='hr-custom left'>
-                    </div>
-                <img class='portfolio-img' src='./assets/Doublejump.PNG'>
-                <span class='github'>View the Source Code</span>
+                    <hr class='hr-custom right'>
+                    <h2 class='title'>Double Jump</h2>
+                    <hr class='hr-custom left'>
+                </div>
+                <a href="https://doublejumps.herokuapp.com/">
+                    <img class='portfolio-img' src='./assets/Doublejump.PNG'>
+                </a>
+                <a href="https://github.com/Mamckay/DoubleJump-Client">
+                    <span class='github'>View the Source Code</span>
+                </a>
                 <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
             </div>
             <div class='flex-align-center column'>
                 <div class='flex-justify-center'>
-                        <hr class='hr-custom right'>
-                        <h2 class='title'>Coming Soon</h2>
-                        <hr class='hr-custom left'>
-                    </div>
-                <img class='portfolio-img' src='./assets/Helpful.PNG'>
-                <span class='github'>View the Source Code</span>
+                    <hr class='hr-custom right'>
+                    <h2 class='title'>Coming Soon</h2>
+                    <hr class='hr-custom left'>
+                </div>
+                <a href='#'>
+                    <img class='portfolio-img' src='./assets/comingsoon.jpg'>
+                </a>
+                <a href='#'>
+                    <span class='github'>View the Source Code</span>
+                </a>
                 <p class='text'> Coming soon! </p>
             </div>
         </div>
