added some target properties

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <img class='my-img' src='./assets/squareme.png'>
                 <p class='text landing-text'>Hello, My name is Michael and I'm a software developer in Colorado. I love to code and chat with great people. Shoot me an email if you want to talk.</p>
                 <div>
-                    <a href="https://github.com/Mamckay">
+                    <a  target=“_blank” href="https://github.com/Mamckay">
                         <img class='contact-img' src='./assets/Github.png'>
                     </a>
-                    <a href="mailto:mamckay89@gmail.com">
+                    <a  target=“_blank” href="mailto:mamckay89@gmail.com">
                         <img class='contact-img' src='./assets/email-icon.png'>
                     </a>
-                    <a href="https://www.linkedin.com/in/michaelcmckay/">
+                    <a  target=“_blank” href="https://www.linkedin.com/in/michaelcmckay/">
                         <img class='contact-img' src='./assets/linkedin.png'>
                     </a>
-                    <a href="./assets/Resume.pdf">
+                    <a  target=“_blank” href="./assets/Resume.pdf">
                         <img class='contact-img' src='./assets/resume-icon.png'>
                     </a>
                 </div>
@@ -38,10 +38,10 @@
                     <h2 class='title'>Helpful</h2>
                     <hr class='hr-custom left'>
                 </div>
-                <a href="https://helpful-client.herokuapp.com/">
+                <a target=“_blank” href="https://helpful-client.herokuapp.com/">
                     <img class='portfolio-img' src='./assets/Helpful.PNG'>
                 </a>
-                <a href="https://github.com/thinkful-ei26/Helpful-Client">
+                <a  target=“_blank” href="https://github.com/thinkful-ei26/Helpful-Client">
                     <span class='github'>View the Source Code</span>
                 </a>
                 <p class='text'> Helpful us a platform for volunteer organizations and volunteers to connect, create and grow.</p>
@@ -52,10 +52,10 @@
                     <h2 class='title'>Double Jump</h2>
                     <hr class='hr-custom left'>
                 </div>
-                <a href="https://doublejumps.herokuapp.com/">
+                <a  target=“_blank” href="https://doublejumps.herokuapp.com/">
                     <img class='portfolio-img' src='./assets/Doublejump.PNG'>
                 </a>
-                <a href="https://github.com/Mamckay/DoubleJump-Client">
+                <a  target=“_blank” href="https://github.com/Mamckay/DoubleJump-Client">
                     <span class='github'>View the Source Code</span>
                 </a>
                 <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
@@ -66,10 +66,10 @@
                     <h2 class='title'>Coming Soon</h2>
                     <hr class='hr-custom left'>
                 </div>
-                <a href='#'>
+                <a  target=“_blank” href='#'>
                     <img class='portfolio-img' src='./assets/comingsoon.jpg'>
                 </a>
-                <a href='#'>
+                <a  target=“_blank” href='#'>
                     <span class='github'>View the Source Code</span>
                 </a>
                 <p class='text'> Coming soon! </p>
