--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <script type="text/javascript" src="scripts/main.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
+    <link rel="icon" type="image/png" href="./assets/icon-small.jpg">
 </head>
 <body>
     <main class='background'>
+        <div class='navbar'>
+            <img class='icon' src='./assets/icon-large.png'>
+            <button class='portfolio-button'>portfolio</button>
+        </div>
         <div class='parallax'>
             <div class='flex-align-center column'>
                 <img class='my-img' src='./assets/squareme.png'>
@@ -33,25 +38,18 @@
         </div>
         <div class='portfolio'>
             <div class='flex-align-center column'>
-                <div class='flex-justify-center'>
-                    <hr class='hr-custom right'>
-                    <h2 class='title'>Helpful</h2>
-                    <hr class='hr-custom left'>
-                </div>
+                <h2 class='title inline-flex'><hr class='hr-custom right'>Helpful<hr class='hr-custom left'></h2>
                 <a target=“_blank” href="https://helpful-client.herokuapp.com/">
                     <img class='portfolio-img' src='./assets/Helpful.PNG'>
                 </a>
                 <a  target=“_blank” href="https://github.com/thinkful-ei26/Helpful-Client">
                     <span class='github'>View the Source Code</span>
                 </a>
-                <p class='text'> Helpful us a platform for volunteer organizations and volunteers to connect, create and grow.</p>
+                <span class='secondary-title'>What?</span>
+                <p class='text'> Helpful is a platform for volunteer organizations and volunteers to connect, create and grow.</p>
             </div>
             <div class='flex-align-center column'>
-                <div class='flex-justify-center'>
-                    <hr class='hr-custom right'>
-                    <h2 class='title'>Double Jump</h2>
-                    <hr class='hr-custom left'>
-                </div>
+                <h2 class='title inline-flex'><hr class='hr-custom right'>Double Jump<hr class='hr-custom left'></h2>
                 <a  target=“_blank” href="https://doublejumps.herokuapp.com/">
                     <img class='portfolio-img' src='./assets/Doublejump.PNG'>
                 </a>
@@ -61,11 +59,7 @@
                 <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
             </div>
             <div class='flex-align-center column'>
-                <div class='flex-justify-center'>
-                    <hr class='hr-custom right'>
-                    <h2 class='title'>Coming Soon</h2>
-                    <hr class='hr-custom left'>
-                </div>
+                <h2 class='title inline-flex'><hr class='hr-custom right'>Coming Soon<hr class='hr-custom left'></h2>
                 <a  target=“_blank” href='#'>
                     <img class='portfolio-img' src='./assets/comingsoon.jpg'>
                 </a>
