added changes to the portfolio info sections

--- a/index.html
+++ b/index.html
@@ -36,17 +36,22 @@
                 </div>
             </div>    
         </div>
+        <div class="portfolio-title">PORTFOLIO</div>
         <div class='portfolio'>
             <div class='flex-align-center column'>
                 <h2 class='title inline-flex'><hr class='hr-custom right'>Helpful<hr class='hr-custom left'></h2>
-                <a target=“_blank” href="https://helpful-client.herokuapp.com/">
+                <a id='portfolio-station' target=“_blank” href="https://helpful-client.herokuapp.com/">
                     <img class='portfolio-img' src='./assets/Helpful.PNG'>
                 </a>
                 <a  target=“_blank” href="https://github.com/thinkful-ei26/Helpful-Client">
                     <span class='github'>View the Source Code</span>
                 </a>
-                <span class='secondary-title'>What?</span>
+                <span class='secondary-title'>What it does:</span>
                 <p class='text'> Helpful is a platform for volunteer organizations and volunteers to connect, create and grow.</p>
+                <span class='secondary-title'>Tech Stack: </span>
+                <span class='text'>Node.js, React, React Hooks, Express, Passport, Mocha/Chai, Mogodb, Enzyme/Jest</span>
+                <span class='secondary-title'>APIs: </span>
+                <span class='text'>Google Maps API</span>
             </div>
             <div class='flex-align-center column'>
                 <h2 class='title inline-flex'><hr class='hr-custom right'>Double Jump<hr class='hr-custom left'></h2>
@@ -56,7 +61,10 @@
                 <a  target=“_blank” href="https://github.com/Mamckay/DoubleJump-Client">
                     <span class='github'>View the Source Code</span>
                 </a>
-                <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
+                <span class='secondary-title'>What it does:</span>
+                <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing.</p>
+                <span class='secondary-title'>Tech Stack: </span>
+                <span class='text'>Mongodb, Node.js, React, Express, Passport, Mocha/Chai</span>
             </div>
             <div class='flex-align-center column'>
                 <h2 class='title inline-flex'><hr class='hr-custom right'>Coming Soon<hr class='hr-custom left'></h2>
@@ -66,11 +74,20 @@
                 <a  target=“_blank” href='#'>
                     <span class='github'>View the Source Code</span>
                 </a>
-                <p class='text'> Coming soon! </p>
+                <span class='secondary-title'>What it does:</span>
+                <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
+                <span class='secondary-title'>Tech Stack: </span>
+                <span class='text'>Node.js, React, Express, Passport, Mocha/Chai</span>
+                <span class='secondary-title'>APIs: </span>
+                <span class='text'>Google Maps API</span>
             </div>
         </div>
         <div class='footer flex-align-center'>
         </div>
     </main>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>
+        setup();
+    </script> 
 </body>
 </html>
