fixed minor img issue

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main class='background'>
         <div class='navbar'>
-            <img class='icon' src='./assets/icon-large.png'>
+            <img class='icon' src='./assets/icon-large.PNG'>
             <button class='portfolio-button'>portfolio</button>
         </div>
         <div class='parallax'>
