--- a/index.html
+++ b/index.html
@@ -86,8 +86,17 @@
         </div>
     </main>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src='./scripts/enter-view.js'></script>
     <script>
         setup();
+    </script>
+    <script>
+        enterView({
+            selector: '.flex-align-center',
+            enter: function(el) {
+                el.classList.add('fade-in-fwd')
+            }
+        })
     </script> 
 </body>
 </html>
