--- a/index.html
+++ b/index.html
@@ -85,12 +85,19 @@
         <div class='footer flex-align-center'>
         </div>
     </main>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src='./scripts/enter-view.js'></script>
     <script>
         setup();
     </script>
     <script>
+          $(document).ready(function () {
+                $('.portfolio-button').on('click', event => {
+                    window.scrollTo(0, window.screen.height);
+                    event.preventDefault();
+                });
+        });
+
         enterView({
             selector: '.flex-align-center',
             enter: function(el) {
@@ -100,3 +107,4 @@
     </script> 
 </body>
 </html>
+
