--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class='parallax'>
             <div class='flex-align-center column'>
-                <img class='my-img' src='./assets/squareme.png'>
+                <img class='my-img' src='./assets/square.png'>
                 <p class='text landing-text'>Hello, My name is Michael and I'm a software developer in Colorado. I love to code and chat with great people. Shoot me an email if you want to talk.</p>
                 <div>
                     <a  target=“_blank” href="https://github.com/Mamckay">
@@ -91,11 +91,11 @@
         setup();
     </script>
     <script>
-          $(document).ready(function () {
-                $('.portfolio-button').on('click', event => {
-                    window.scrollTo(0, window.screen.height);
-                    event.preventDefault();
-                });
+        $(document).ready(function () {
+            $('.portfolio-button').on('click', event => {
+                window.scrollTo(0, window.screen.height);
+                event.preventDefault();
+            });
         });
 
         enterView({
