updating portfolio section

--- a/index.html
+++ b/index.html
@@ -63,24 +63,22 @@
                     <span class='github'>View the Source Code</span>
                 </a>
                 <span class='secondary-title'>What it does:</span>
-                <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing.</p>
+                <p class='text'> An E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing.</p>
                 <span class='secondary-title'>Tech Stack: </span>
                 <span class='text'>Mongodb, Node.js, React, Express, Passport, Mocha/Chai</span>
             </div>
             <div class='flex-align-center column'>
-                <h2 class='title inline-flex'>Coming Soon</h2>
+                <h2 class='title inline-flex'>Watchdog</h2>
                 <a  target=“_blank” href='#'>
-                    <img class='portfolio-img' src='./assets/comingsoon.jpg'>
+                    <img class='portfolio-img' src='./assets/Watchdog.PNG'>
                 </a>
                 <a  target=“_blank” href='#'>
                     <span class='github'>View the Source Code</span>
                 </a>
                 <span class='secondary-title'>What it does:</span>
-                <p class='text'> A E-commerce marketplace for elecronic and accesories. Uses stripe for payment processing with React, Node and Mongo.</p>
+                <p class='text'> Setup up your own cctv home network with Node! Watchdog is a home defense system for Node enthusiasts.</p>
                 <span class='secondary-title'>Tech Stack: </span>
-                <span class='text'>Node.js, React, Express, Passport, Mocha/Chai</span>
-                <span class='secondary-title'>APIs: </span>
-                <span class='text'>Google Maps API</span>
+                <span class='text'>Node.js, Express, Opencv, Http-server</span>
             </div>
         </div>
         <img class='alpha-img' src='./assets/alphalayerme.jpg'>
