no party like a css party

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div> -->
             </div>    
         </section>
-        <h2 class="portfolio-title">Skills</h2>
+        <h2 class="skills-title">Skills</h2>
         <section class='portfolio'>
             <ul class='skills'>
                 <div>
@@ -80,7 +80,7 @@
                 </div>
             </ul>
         </section>
-        <h2 class="portfolio-title">PORTFOLIO</h2>
+        <h2 id='portfolio-station' class="portfolio-title">PORTFOLIO</h2>
         <ul class='portfolio'>
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Helpful</h2>
