--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <ul class='portfolio'>
             <li class='flex-align-center column spacer'>
                 <h2 class='title inline-flex'>Helpful</h2>
-                <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-client.herokuapp.com/"></a>
+                <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/"></a>
                     <img alt='portfolio picture' class='portfolio-img' src='./assets/Helpful.PNG'>
                 </a>
-                <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-client.herokuapp.com/">
+                <a aria-label="View live app for Helpful" target=“_blank” href="https://helpful-mike.herokuapp.com/">
                     <button class='project-button'>Live</button>
                 </a>
                 
